--- a/Docker/postgresql-dev/Dockerfile
+++ b/Docker/postgresql-dev/Dockerfile
@@ -7,30 +7,30 @@ MAINTAINER flavioclesio.com <flavioclesio@gmail.com>
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
 
 # Add PostgreSQL's repository. It contains the most recent stable release
-#     of PostgreSQL, ``9.3``.
+#     of PostgreSQL, ``9.6``.
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main" > /etc/apt/sources.list.d/pgdg.list
 
 # Update the Ubuntu and PostgreSQL repository indexes and install ``python-software-properties``,
-# ``software-properties-common`` and PostgreSQL 9.3
+# ``software-properties-common`` and PostgreSQL 9.6
 # There are some warnings (in red) that show up during the build. You can hide
 # them by prefixing each apt-get statement with DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get -y -q install python-software-properties software-properties-common \
-    && apt-get -y -q install postgresql-9.3 postgresql-client-9.3 postgresql-contrib-9.3
+    && apt-get -y -q install postgresql-9.6 postgresql-client-9.6 postgresql-contrib-9.6
 
 USER postgres
 
 RUN /etc/init.d/postgresql start \
-    && psql --command "CREATE USER dwh WITH SUPERUSER PASSWORD 'dwh';" \
-    && createdb -O dwh pgdb
+    && psql --command "CREATE USER aircraft WITH SUPERUSER PASSWORD 'aircraft';" \
+    && createdb -O aircraft pgdb
 
 USER root
 
 # Adjust PostgreSQL configuration so that remote connections to the
 # database are possible.
-RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.3/main/pg_hba.conf
+RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.6/main/pg_hba.conf
 
-# And add ``listen_addresses`` to ``/etc/postgresql/9.3/main/postgresql.conf``
-RUN echo "listen_addresses='*'" >> /etc/postgresql/9.3/main/postgresql.conf
+# And add ``listen_addresses`` to ``/etc/postgresql/9.6/main/postgresql.conf``
+RUN echo "listen_addresses='*'" >> /etc/postgresql/9.6/main/postgresql.conf
 
 # Expose the PostgreSQL port
 EXPOSE 5432
@@ -43,4 +43,4 @@ VOLUME  ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
 USER postgres
 
 # Set the default command to run when starting the container
-CMD ["/usr/lib/postgresql/9.3/bin/postgres", "-D", "/var/lib/postgresql/9.3/main", "-c", "config_file=/etc/postgresql/9.3/main/postgresql.conf"]
+CMD ["/usr/lib/postgresql/9.6/bin/postgres", "-D", "/var/lib/postgresql/9.6/main", "-c", "config_file=/etc/postgresql/9.6/main/postgresql.conf"]
