Clean up and set new version

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Python/survival-analysis/.ipynb_checkpoints/*
 
 .DS_Store
 Python/.DS_Store
+/Users/flavioclesio/Documents/Github/learning-space/Python/ims24/analytics-database/pgdata
